# search-lyrics

./: README.md  pyproject.toml
search_lyrics/: __init__.py  entrypoint.py  main.py
