[project]
name = "search-lyrics"
version = "0.0.1"
description = "Search for lyric"
authors = [
    {name = "Xavier Mitault", email = "xavier.mitault@epitech.eu"},
]
dependencies = [
    "wrap-genius>=1.8.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
